--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
 main {
+  width: 80%;
+  max-width: 950px;
   margin: auto;
   text-align: center;
 }
@@ -58,4 +60,19 @@ main {
   transform: translateY(-1px);
   box-shadow: 0 7px 14px rgba(50,50,93,.1), 0 3px 6px rgba(0,0,0,.08);
 
+}
+
+input {
+  width: 100%;
+  height: 38px;
+  padding: 6px 10px;
+  background-color: #fff;
+  border: 1px solid #d4dada;
+  border-radius: 3px;
+  box-shadow: none;
+  vertical-align: bottom;
+}
+input:focus {
+  border: 1px solid #07682c;
+  outline: 0;
 }
