--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,12 @@ main {
   cursor: pointer;
 }
 
+.search-button:hover {
+  color: #7795f8;
+  transform: translateY(-1px);
+  box-shadow: 0 7px 14px rgba(50, 50, 93, 0.1), 0 3px 6px rgba(0, 0, 0, 0.08);
+}
+
 .search-button:active {
   color: #555abf;
   background-color: #f6f9fc;
@@ -55,17 +61,12 @@ main {
   box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
 }
 
-.search-button:hover {
-  color: #7795f8;
-  transform: translateY(-1px);
-  box-shadow: 0 7px 14px rgba(50, 50, 93, 0.1), 0 3px 6px rgba(0, 0, 0, 0.08);
-}
-
 input {
   width: 100%;
   height: 38px;
   padding: 6px 10px;
   background-color: #fff;
+  font-size: 16px;
   border: 1px solid #d4dada;
   border-radius: 3px;
   box-shadow: none;
